--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
-
-nav{
+.navBar {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -7,76 +6,81 @@ nav{
     background-color: #040404;
 }
 
-nav ul{
+nav ul {
     display: flex;
     justify-content: space-around;
     width: 45%;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
- margin-top: 10px;}
+    margin-top: 10px;
+}
 
-nav ul li a{
-    color:rgb(226, 226, 226);
+nav ul li a {
+    color: rgb(226, 226, 226);
     text-decoration: none;
     font-size: 20px;
-   
+
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     text-transform: uppercase;
-    color:#fec107;
+    color: #fec107;
 }
+
 @media screen and (max-width:720px) {
-    nav ul{
+    nav ul {
         position: absolute;
         right: 0px;
         top: 9vh;
         background-color: #040404;
-        height: 91vh ;
+        height: 91vh;
         flex-direction: column;
         width: 100vw;
         align-items: center;
         transform: translateX(100%);
         transition: 2s;
- 
+
 
 
     }
 
-    body{
+    body {
         overflow-x: hidden;
     }
 }
-.navclick{
+
+.navclick {
     transform: translateX(0%);
 }
-.websiteName{
+
+.websiteName {
     font-size: 35px;
-    color:  #fec107;
+    color: #fec107;
     margin-top: -5px;
     padding-right: 20px;
     font-family: var(--bs-body-font-family)
-    
 }
+
+/*about part*/
 .hero {
     height: 100vh;
     position: relative;
     color: #fff;
-    
-  }
-  
-  .hero .hero-content {
+
+}
+
+.hero .hero-content {
     text-align: center;
     position: absolute;
     position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  }
-  
-  .hero .overlay-itro {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hero .overlay-itro {
     background-color: #040404;
     position: absolute;
     top: 0;
@@ -85,198 +89,271 @@ nav ul li a:hover{
     height: 100%;
     width: 100%;
     opacity: 0.9;
-  }
-  
-  .hero .hero-title {
+}
+
+.hero .hero-title {
     color: #fff;
     font-weight: 600;
     font-size: 3rem;
-  }
-  
-  @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .hero .hero-title {
-      font-size: 4.5rem;
+        font-size: 4.5rem;
     }
-  }
-  
-  .hero .hero-subtitle {
+}
+
+.hero .hero-subtitle {
     font-size: 1.5rem;
     font-weight: 600;
-  }
-  
-  @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .hero .hero-subtitle {
-      font-size: 2.5rem;
+        font-size: 2.5rem;
     }
-  }
-  
-  .hero .text-slider-items {
+}
+
+.hero .text-slider-items {
     display: none;
-  }
-  
-  .hero-single {
+}
+
+.hero-single {
     height: 350px;
-  }
-  
-  .hero-single .hero-content {
+}
+
+.hero-single .hero-content {
     margin-top: 30px;
-  }
-  
-  .hero-single .hero-title {
+}
+
+.hero-single .hero-title {
     text-transform: uppercase;
     font-size: 3rem;
-  }
-  
-  @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .hero-single .hero-title {
-      font-size: 3.5rem;
+        font-size: 3.5rem;
     }
-  }
-  
-  .hero-single .breadcrumb {
+}
+
+.hero-single .breadcrumb {
     background-color: transparent;
     color: #fec107;
-  }
-  
-  .hero-single .breadcrumb .breadcrumb-item:before {
+}
+
+.hero-single .breadcrumb .breadcrumb-item:before {
     color: #cde1f8;
-  }
-  
-  .hero-single .breadcrumb .breadcrumb-item.active {
+}
+
+.hero-single .breadcrumb .breadcrumb-item.active {
     color: #cde1f8;
-  }
-  
-  .hero-single .breadcrumb a {
+}
+
+.hero-single .breadcrumb a {
     color: #fff;
-  }
-  .about-mf .box-shadow-full {
+}
+
+.about-mf .box-shadow-full {
     padding-top: 4rem;
     padding-bottom: 4rem;
-  }
-  
-  .about-mf .about-img {
+}
+
+.about-mf .about-img {
     margin-bottom: 2rem;
-  }
-  
-  .about-mf .about-img img {
+}
+
+.about-mf .about-img img {
     margin-left: 10px;
-  }
-  
-  @media (min-width: 767px) {
+}
+
+@media (min-width: 767px) {
     .about-mf .box-pl2 {
-      margin-top: 3rem;
-      padding-left: 0rem;
+        margin-top: 3rem;
+        padding-left: 0rem;
     }
-  }
-  
-  .skill-mf span {
+}
+
+.skill-mf span {
     color: #4e4e4e;
-  }
-  
-  .skill-mf .progress {
+}
+
+.skill-mf .progress {
     background-color: #cde1f8;
     margin: 0.5rem 0 1.2rem 0;
     border-radius: 0;
     height: 0.7rem;
-  }
-  
-  .skill-mf .progress .progress-bar {
+}
+
+.skill-mf .progress .progress-bar {
     height: 0.7rem;
     background-color: #0078ff;
-  }
-  
-  .footer-paralax {
-    padding: 4rem 0 0 0;
-  }
-  
-  .contact-mf {
-    margin-top: 4rem;
-  }
-  
-  @media (min-width: 767px) {
-    .contact-mf .box-pl2 {
-      margin-top: 3rem;
-      padding-left: 0rem;
-    }
-  }
-  
-  .php-email-form .error-message {
-    display: none;
+}
+
+/*social media part*/
+:root {
+    --facebook: #fec107;
+    --Github: #fec107;
+    --linkedin: #fec107;
+    --instagram: #fec107;
+    --WhatsApp: #fec107;
+    --Email: #fec107;
+
+}
+
+/*body { background-color: #ccc; }*/
+
+.socialSection {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #ccc; ;
+}
+
+.contactMe{
+    width: 675px;
+    display: flex;
+    justify-content: space-between;
+}
+
+section a{
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    position: relative;
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
+    transition: 0.6s all ease-in-out;
+}
+
+a svg {
+    width: 30px;
+    height: 30px;
+}
+
+a svg path,
+a svg circle {
+    transition: 0.3s all ease-in-out;
+}
+
+a span {
+    position: absolute;
     color: #fff;
-    background: #ed3c0d;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  .php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #18d26e;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  .php-email-form .loading {
-    display: none;
-    background: #fff;
-    text-align: center;
-    padding: 15px;
-  }
-  
-  .php-email-form .loading:before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px -6px 0;
-    border: 3px solid #18d26e;
-    border-top-color: #eee;
-    animation: animate-loading 1s linear infinite;
-  }
-  
-  .php-email-form input,
-  .php-email-form textarea {
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 14px;
-  }
-  
-  .php-email-form input:focus,
-  .php-email-form textarea:focus {
-    border-color: #0078ff;
-  }
-  
-  .php-email-form input {
-    padding: 10px 15px;
-  }
-  
-  .php-email-form textarea {
-    padding: 12px 15px;
-    margin-bottom: 0;
-  }
-  
-  .php-email-form button[type=submit] {
-    background: #0078ff;
-    border: 0;
-    padding: 10px 24px;
-    color: #fff;
-    transition: 0.4s;
-  }
-  
-  .php-email-form button[type=submit]:hover {
-    background: #3393ff;
-  }
-  
-  @keyframes animate-loading {
-    0% {
-      transform: rotate(0deg);
-    }
-  
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
+    transform: translateY(0px);
+    font-size: 18px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.6s all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-delay: 0s;
+}
+
+a span::before {
+    position: absolute;
+    content: '';
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #fff;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+a.facebook span {
+    background-color: var(--facebook);
+}
+
+a.facebook span::before {
+    border-top-color: var(--facebook);
+}
+a.WhatsApp span {
+    background-color: var(--WhatsApp);
+}
+
+a.WhatsApp span::before {
+    border-top-color: var(--WhatsApp);
+}
+a.Email span {
+    background-color: var(--Email);
+}
+
+a.Email span::before {
+    border-top-color: var(--Email);
+}
+
+a.Github span {
+    background-color: var(--Github);
+}
+
+a.Github span::before {
+    border-top-color: var(--Github);
+}
+
+a.linkedin span {
+    background-color: var(--linkedin);
+}
+
+a.linkedin span::before {
+    border-top-color: var(--linkedin);
+}
+
+a.instagram span {
+    background-color: var(--instagram);
+}
+
+a.instagram span::before {
+    border-top-color: var(--instagram);
+}
+
+a.active,
+a:hover {
+    box-shadow: -20px 20px 30px rgba(0, 0, 0, 0.5);
+}
+
+a.facebook:hover {
+    background-color: var(--facebook);
+}
+a.Email:hover {
+    background-color: var(--Email);
+}
+a.WhatsApp:hover {
+    background-color: var(--WhatsApp);
+}
+
+a.Github:hover {
+    background-color: var(--Github);
+}
+
+a.linkedin:hover {
+    background-color: var(--linkedin);
+}
+
+a.instagram.active,
+a.instagram:hover {
+    background-color: var(--instagram);
+}
+
+a.active span,
+a:hover span {
+    transform: translateY(-80px);
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0.3s;
+}
+
+a.active svg path,
+a.active svg circle,
+a:hover svg path,
+a:hover svg circle {
+    fill: #fff;
+}
+/*up button*/
+ 
+   
